// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsView does display a warning 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-llYSUQ cnlYxc eNTkBC"
        >
          WARNING
        </div>
        <h4
          class="sc-kLwhqv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-jJoQJp"
            />
                   
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-fKVqWL"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-ZOtfp koHcGf"
        >
          xx3.Warning
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display a warning for GQL status codes 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-llYSUQ cnlYxc eNTkBC"
        >
          WARNING
        </div>
        <h4
          class="sc-kLwhqv"
        >
          03N90: Cartesian product
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          The disconnected pattern 'p = ()--(), q = ()--()' builds a cartesian product. A cartesian product may produce a large amount of data and slow down query processing.
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-jJoQJp"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display multiple warnings 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-llYSUQ cnlYxc eNTkBC"
        >
          WARNING
        </div>
        <h4
          class="sc-kLwhqv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-jJoQJp"
            />
                   
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-fKVqWL"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-ZOtfp koHcGf"
        >
          xx3.Warning
        </code>
      </div>
    </div>
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-llYSUQ cnlYxc eNTkBC"
        >
          WARNING
        </div>
        <h4
          class="sc-kLwhqv"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-jJoQJp"
            />
               
            ^
          </pre>
        </div>
      </div>
      <div
        class="sc-fKVqWL"
        style="margin-top: 10px;"
      >
        Status code: 
        <code
          class="sc-ZOtfp koHcGf"
        >
          yy3.Warning
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display multiple warnings for GQL status codes 1`] = `
<div>
  <div
    class="sc-hGPBjI kgdIGh"
  >
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-llYSUQ cnlYxc eNTkBC"
        >
          WARNING
        </div>
        <h4
          class="sc-kLwhqv"
        >
          03N90: Cartesian product
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          The disconnected pattern 'p = ()--(), q = ()--()' builds a cartesian product. A cartesian product may produce a large amount of data and slow down query processing.
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-jJoQJp"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-dlVxhl fwhZkz"
    >
      <div
        class="sc-kfPuZi lgMZCo"
      >
        <div
          class="sc-cxpSdN sc-llYSUQ cnlYxc eNTkBC"
        >
          WARNING
        </div>
        <h4
          class="sc-kLwhqv"
        >
          01N50: Label does not exist
        </h4>
      </div>
      <div
        class="sc-fKVqWL"
      >
        <div
          class="sc-kfPuZi lgMZCo"
        >
          The label \`A\` does not exist. Verify that the spelling is correct.
        </div>
        <div
          class="sc-fKVqWL"
        >
          <pre
            class="sc-hiCibw jvxLJD"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-jJoQJp"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
